--- a/helm/memberships-rw-neo4j/Chart.yaml
+++ b/helm/memberships-rw-neo4j/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: memberships-rw-neo4j Helm chart for Kubernetes
 name: memberships-rw-neo4j
-version: 0.1.0
+version: 0.0.0
