--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-notes.md
-memberships-rw-neo4j
-.idea/
-
 Compiled source #
 ###################
 *.exe
@@ -10,3 +6,20 @@ memberships-rw-neo4j
 # Logs and databases #
 ######################
 *.log
+# Binaries for programs and plugins
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Test binary, build with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
+.glide/
+
+vendor/*/
+.idea*
